[build-system]
requires = [
    "setuptools >= 61.0",
    "wheel"
    ]
build-backend = "setuptools.build_meta"


[project]
name = "ben_future_value"
version = "0.1.0"



[project.optional-dependencies]
test = [
    "pytest",
    "coverage",
    "ben_future_value"
]

[tool.hatch.build.targets.wheel]
packages = ["ben_future_value"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = ["-ra", "--showlocals", "--strict-markers", "--strict-config"]
xfail_strict = true
filterwarnings = ["error"]
log_cli_level = "info"
testpaths = [

  "tests",

]